--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -6,15 +6,17 @@
 
     <uses-sdk
         android:minSdkVersion="9"
-        android:targetSdkVersion="18" />
+        android:targetSdkVersion="19" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+        <!--  SPLASH -->
         <activity
-            android:name="com.example.fizzbuzz.MainActivity"
+            android:name="com.example.fizzbuzz.Splash"
             android:screenOrientation="portrait"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" >
@@ -23,6 +25,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        
+        <!-- MAIN -->
+        <activity
+            android:name="com.example.fizzbuzz.MainActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name" >
         </activity>
     </application>
 
