--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.fizzbuzz"
+    package="com.devcru.fizzbuzz"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -16,7 +16,7 @@
         
         <!--  SPLASH -->
         <activity
-            android:name="com.example.fizzbuzz.Splash"
+            android:name="com.devcru.fizzbuzz.Splash"
             android:screenOrientation="portrait"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" >
@@ -29,7 +29,7 @@
         
         <!-- MAIN -->
         <activity
-            android:name="com.example.fizzbuzz.MainActivity"
+            android:name="com.devcru.fizzbuzz.MainActivity"
             android:screenOrientation="portrait"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name" >
